--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         <li>link 9</li>
         <li>link 10</li>
     </ul>
+    
+    <div class="floated">
+        <div class="floated-inner"></div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, et, quam. Quos dolor dicta quod vel quaerat. Deleniti, dolorem porro rerum aspernatur eaque aperiam. Fugit ad voluptatem consectetur eos placeat!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, et, quam. Quos dolor dicta quod vel quaerat. Deleniti, dolorem porro rerum aspernatur eaque aperiam. Fugit ad voluptatem consectetur eos placeat!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, et, quam. Quos dolor dicta quod vel quaerat. Deleniti, dolorem porro rerum aspernatur eaque aperiam. Fugit ad voluptatem consectetur eos placeat!</p>
+    </div>
 </body>
 
 </html>
